errors.txt
In file included from Directory.cpp:2:0:
Directory.h:20:3: error: ‘FileControlBlock’ does not name a type
   FileControlBlock getFCB(string);
   ^~~~~~~~~~~~~~~~
Directory.h:23:3: error: ‘vector’ does not name a type
   vector<FileControlBlock> dir = new vector();
   ^~~~~~
Directory.h:24:3: error: ‘counter’ does not name a type
   counter = 0;
   ^~~~~~~
Directory.cpp: In function ‘bool createFile(std::__cxx11::string)’:
Directory.cpp:6:22: error: ‘hasFreeSpace’ was not declared in this scope
     if(!hasFreeSpace()){
                      ^
Directory.cpp:9:5: error: ‘dir’ was not declared in this scope
     dir[counter] = new FileControlBlock(name);
     ^~~
Directory.cpp:9:9: error: ‘counter’ was not declared in this scope
     dir[counter] = new FileControlBlock(name);
         ^~~~~~~
Directory.cpp:9:24: error: expected type-specifier before ‘FileControlBlock’
     dir[counter] = new FileControlBlock(name);
                        ^~~~~~~~~~~~~~~~
Directory.cpp: In function ‘bool nameExists(std::__cxx11::string)’:
Directory.cpp:16:10: error: ‘vector’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
          ^~~~~~
Directory.cpp:16:17: error: ‘FileControlBlock’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                 ^~~~~~~~~~~~~~~~
Directory.cpp:16:45: error: missing template arguments before ‘it’
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                                             ^~
Directory.cpp:16:64: error: ‘it’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                                                                ^~
Directory.cpp:16:70: error: ‘dir’ was not declared in this scope
     for (vector<FileControlBlock>::iterator it = dir.begin() ; it != dir.end(); ++it){
                                                                      ^~~
Directory.cpp:17:14: error: ‘i’ was not declared in this scope
       if(dir[i] == name){
              ^
Directory.cpp: In function ‘std::__cxx11::string getFileName(int)’:
Directory.cpp:25:12: error: ‘dir’ was not declared in this scope
     return(dir[file].getFile());
            ^~~
Directory.cpp: In function ‘int getFileSize(int)’:
Directory.cpp:29:12: error: ‘dir’ was not declared in this scope
     return(dir[file].getSize());
            ^~~
Directory.cpp: In function ‘bool deleteFile(std::__cxx11::string)’:
Directory.cpp:32:33: error: ‘getFCB’ was not declared in this scope
     return(freeSpace(getFCB(name).getFirstPointer(), getFCB(name).getLastPointer()));
                                 ^
Directory.cpp:32:83: error: ‘freeSpace’ was not declared in this scope
     return(freeSpace(getFCB(name).getFirstPointer(), getFCB(name).getLastPointer()));
                                                                                   ^
Directory.cpp: At global scope:
Directory.cpp:34:3: error: ‘FileControlBlock’ does not name a type
   FileControlBlock getFCB(string name){
   ^~~~~~~~~~~~~~~~
In file included from FileControlBlock.cpp:4:0:

FileSystem.cpp:6:25: fatal error: DiskProcess.h: No such file or directory

                         ^
compilation terminated.
In file included from UI.h:8:0,
                 from UI.cpp:10:
Directory.h:20:3: error: ‘FileControlBlock’ does not name a type
   FileControlBlock getFCB(string);
   ^~~~~~~~~~~~~~~~
Directory.h:23:10: error: ‘FileControlBlock’ was not declared in this scope
   vector<FileControlBlock> dir = new vector();
          ^~~~~~~~~~~~~~~~
Directory.h:23:26: error: template argument 1 is invalid
   vector<FileControlBlock> dir = new vector();
                          ^
Directory.h:23:26: error: template argument 2 is invalid
Directory.h:24:3: error: ‘counter’ does not name a type
   counter = 0;
   ^~~~~~~
Directory.h:23:38: error: expected type-specifier before ‘vector’
   vector<FileControlBlock> dir = new vector();
                                      ^~~~~~
In file included from UI.cpp:10:0:
UI.h: In function ‘void edit(std::__cxx11::string)’:
UI.h:149:42: error: ‘std::__cxx11::string {aka class std::__cxx11::basic_string<char>}’ has no member named ‘eof’
     while (getline(cin, input) && !input.eof()){
                                          ^~~
